{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 192,
  "lineage": "aba69c5e-ec5f-15a4-1277-7b97189a23d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia_rn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "orange",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02396cdd13e9a1257",
            "arn": "arn:aws:ec2:us-east-1:440829583140:instance/i-0ebb93b0f067c1b6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebb93b0f067c1b6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "manuelec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5bd7bb7b8e84dd8",
            "private_dns": "ip-10-10-0-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.78",
            "public_ip": "100.26.111.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03975d2c3151f2a75",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a267c37a0b40e08",
            "tags": {
              "Name": "orange-neytor-tf-name-dev"
            },
            "tags_all": {
              "Name": "orange-neytor-tf-name-dev",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f59843f5729349b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_instance_rn",
            "aws_subnet.public_subnet_rn",
            "aws_vpc.vpc_virginia_rn",
            "data.aws_key_pair.llave_dt"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "rasp",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02396cdd13e9a1257",
            "arn": "arn:aws:ec2:us-east-1:440829583140:instance/i-00e3749eaf6f5f8ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e3749eaf6f5f8ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "manuelec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-068ab064d894e09f8",
            "private_dns": "ip-10-10-0-97.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.97",
            "public_ip": "54.90.156.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d73d51875f96920a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a267c37a0b40e08",
            "tags": {
              "Name": "rasp-neytor-tf-name-dev"
            },
            "tags_all": {
              "Name": "rasp-neytor-tf-name-dev",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f59843f5729349b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_instance_rn",
            "aws_subnet.public_subnet_rn",
            "aws_vpc.vpc_virginia_rn",
            "data.aws_key_pair.llave_dt"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "rasp_orange",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02396cdd13e9a1257",
            "arn": "arn:aws:ec2:us-east-1:440829583140:instance/i-077d704c1cdd252fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077d704c1cdd252fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "manuelec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b48aed9c1b7c2f8",
            "private_dns": "ip-10-10-0-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.84",
            "public_ip": "50.17.76.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076816f0da566ed21",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a267c37a0b40e08",
            "tags": {
              "Name": "rasp_orange-neytor-tf-name-dev"
            },
            "tags_all": {
              "Name": "rasp_orange-neytor-tf-name-dev",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f59843f5729349b"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_instance_rn",
            "aws_subnet.public_subnet_rn",
            "aws_vpc.vpc_virginia_rn",
            "data.aws_key_pair.llave_dt"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_rn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440829583140:internet-gateway/igw-005d304ecf6324ce2",
            "id": "igw-005d304ecf6324ce2",
            "owner_id": "440829583140",
            "tags": {
              "Name": "igw_vpc_virginia-neytor-tf-name-dev"
            },
            "tags_all": {
              "Name": "igw_vpc_virginia-neytor-tf-name-dev",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            },
            "vpc_id": "vpc-0111409c64addcc81"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia_rn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "crt_subnet_public_rn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440829583140:route-table/rtb-052931748157fde66",
            "id": "rtb-052931748157fde66",
            "owner_id": "440829583140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005d304ecf6324ce2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "crt_subnet_public"
            },
            "tags_all": {
              "Name": "crt_subnet_public",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0111409c64addcc81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_rn",
            "aws_vpc.vpc_virginia_rn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_subnet_public_rf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d82b1dc222a026bb",
            "route_table_id": "rtb-052931748157fde66",
            "subnet_id": "subnet-02a267c37a0b40e08"
          },
          "dependencies": [
            "aws_internet_gateway.igw_rn",
            "aws_route_table.crt_subnet_public_rn",
            "aws_subnet.public_subnet_rn",
            "aws_vpc.vpc_virginia_rn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_instance_rn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440829583140:security-group/sg-06f59843f5729349b",
            "description": "ssh allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f59843f5729349b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh allow trafic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh allow",
            "name_prefix": "",
            "owner_id": "440829583140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_instance_lab6-neytor-tf-name-dev"
            },
            "tags_all": {
              "Name": "sg_instance_lab6-neytor-tf-name-dev",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0111409c64addcc81"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia_rn"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_rn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440829583140:subnet/subnet-0fc544f89079f75d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc544f89079f75d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440829583140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-neytor-tf-name-dev"
            },
            "tags_all": {
              "Name": "private_subnet-neytor-tf-name-dev",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            },
            "vpc_id": "vpc-0111409c64addcc81"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia_rn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_rn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440829583140:subnet/subnet-02a267c37a0b40e08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a267c37a0b40e08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440829583140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-neytor-tf-name-dev"
            },
            "tags_all": {
              "Name": "public_subnet-neytor-tf-name-dev",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            },
            "vpc_id": "vpc-0111409c64addcc81"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia_rn"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia_rn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440829583140:vpc/vpc-0111409c64addcc81",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06f0ce6ec9899afdd",
            "default_route_table_id": "rtb-0cd65aded7daa7a80",
            "default_security_group_id": "sg-003edb543099c3989",
            "dhcp_options_id": "dopt-00d643f909a587523",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0111409c64addcc81",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd65aded7daa7a80",
            "owner_id": "440829583140",
            "tags": {
              "Name": "vpc_virgnia-neytor-tf-name-dev"
            },
            "tags_all": {
              "Name": "vpc_virgnia-neytor-tf-name-dev",
              "env": "dev",
              "iac": "terraform",
              "iac_version": "1.4.5",
              "owner": "yonier",
              "proyecto": "neytor-tf-name",
              "region": "virginia"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}